Fixed Spacing Issue for  Headers

--- a/public/assets/style/app.css
+++ b/public/assets/style/app.css
@@ -109,6 +109,7 @@ main > .wrapper {
 
 main > .wrapper > h1 {
     font-family: 'Bree Serif', serif;
+    padding: 15px 0;
     text-align: left;
 }
 
